--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
       <title> </title>
   </head>
   <body id="body" class="light_theme">
-    <header class="flexSBDesctop mobileDisplayNone">      
+    <header class="flexSBDesctop">      
       <img src="img/settings.png" id="header_settings">
-
-
       <div id="settings_block" class="flexSBDesctop displayNone">
         <div>
           <span id="theme_light">&#9728;</span> 
           <span id="theme_dark">	&#9679;</span>
-
         </div>
         <!-- <div> -->
           <!-- <p>lang</p> -->
@@ -28,7 +25,7 @@
         </div> -->
       </div>
 
-      <div id="header_menu">
+      <div id="header_menu" class="mobileDisplayNone">
         <a href="#about_block"><div>about me</div></a>
         <a href="#project_container"><div>projects</div></a>
         <a href="#skills_block"><div>skills</div></a>
