--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <div id="progress_point_4" class="progress_points"></div>
       </div>
       <div id="project_full_discription_cover"> 
+        <div id="project_full_discription_close_button" class="desctopDisplayNone"></div>
         <div id="project_full_discription">  
         </div>
       </div>
