--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-      <title> </title>
+      <title>Vladimir web deweloper portfolio</title>
   </head>
   <body id="body" class="light_theme">
     <header class="flexSBDesctop">      
-      <img src="img/settings.png" id="header_settings">
+      <img src="img/settings.webp" id="header_settings" alt="settings">
       <div id="settings_block" class="flexSBDesctop displayNone">
         <div>
           <span id="theme_light">&#9728;</span> 
@@ -38,14 +38,14 @@
     <div id="welcome_block" class="flexSBDesctop">
       <div id="welcome_left">
         <div id="welcome_left_cover">
-          <div id="welcome_h1_cover"><img src="img/wave.png" id="welcome_hi_emoji"><h1 id="welcome_h1" class="cent">I'm Vladimir</h1></div>
+          <div id="welcome_h1_cover"><img src="img/wave.webp" id="welcome_hi_emoji" alt="hi emoji"><h1 id="welcome_h1" class="cent">I'm Vladimir</h1></div>
           <h2 id="welcome_h2" class="cent">Web developer</h2>
           <p id="welcome_text">Welcome to my portfolio! <br> I'm a web developer specializing in creating responsive, user-friendly websites. I transform ideas into functional and visually appealing digital experiences. Explore my projects and let's build something amazing together!</p>
         </div>
       </div>
       <div id="welcome_right">
         <div id="welcome_right_cover">
-          <img src="img/welcome.png" id="welcome_img">
+          <img src="img/welcome.webp" id="welcome_img" alt="my photo">
         </div>
       </div>
     </div>
@@ -96,15 +96,15 @@
       <h2 class="mobileDisplayNone">== Skills ========</h2>
       <h2 class="desctopDisplayNone">Skills</h2>
       <div id="skills_img_block">
-        <img src="img/html.png" id="skill_1_img">
-        <img src="img/css.png" id="skill_2_img">
-        <img src="img/js.png" id="skill_3_img">
-        <img src="img/jquery.png" id="skill_4_img">
-        <img src="img/sql.png" id="skill_5_img">
-        <img src="img/php.png" id="skill_6_img">
-        <img src="img/ps.png" id="skill_7_img">
-        <img src="img/figma.png" id="skill_8_img">
-        <img src="img/vue.png" id="skill_9_img">
+        <img src="img/html.webp" id="skill_1_img" alt="html">
+        <img src="img/css.webp" id="skill_2_img" alt="css">
+        <img src="img/js.webp" id="skill_3_img" alt="JavaScript">
+        <img src="img/jquery.webp" id="skill_4_img" alt="jquery">
+        <img src="img/sql.webp" id="skill_5_img" alt="sql">
+        <img src="img/php.webp" id="skill_6_img" alt="php">
+        <img src="img/ps.webp" id="skill_7_img" alt="photoshop">
+        <img src="img/figma.webp" id="skill_8_img" alt="figma">
+        <img src="img/vue.webp" id="skill_9_img" alt="vuejs">
       </div>
     </div>
       <main>
