--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           </div> -->
         </div>
       </div>
-      <div id="projects_left_arrow"></div>
-      <div id="projects_right_arrow"></div> 
+      <div id="projects_left_arrow" class="mobileDisplayNone"></div>
+      <div id="projects_right_arrow" class="mobileDisplayNone"></div> 
       <div id="projects_progress_bar" class="mobileDisplayNone">
         <div id="progress_point_1" class="progress_points"></div>
         <div id="progress_point_2" class="progress_points"></div>
@@ -90,7 +90,11 @@
         <div id="project_full_discription">  
         </div>
       </div>
-    </div>
+      <div id="projects_mobile_arrows" class="desctopDisplayNone">
+        <div></div>
+        <div></div> 
+      </div>
+      </div>
 
     <div id="skills_block" class="width1000 marginCenter">
       <h2 class="mobileDisplayNone">== Skills ========</h2>
