--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
       </div>
     </div>
   </div>
+  <div id="test">
+    <p>width = </p>
+    <span id="w300">300</span>
+    <span id="w400">400</span>
+    <span id="w500">500</span>
+    <span id="w600">600</span>
+    <span id="w700">700</span>
+    <span id="w800">800</span>
+    <span id="w900">900</span>
+    <span id="w1000">1000</span>
+    <span id="w1100">1100</span>
+    <span id="w1200">1200</span>
+    <span id="w1300">1300</span>
+    <span id="w1400">1400</span>
+    <span id="w1500">1500</span>
+  </div>
 
   <div id="body_cover">
     <div id="about_block" class="width1000 marginCenter">
