--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
   </div>
   <div id="test">
     <p>width = </p>
+    <span id="w100">100</span>
+    <span id="w200">200</span>
     <span id="w300">300</span>
     <span id="w400">400</span>
     <span id="w500">500</span>
