--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       <img src="img/settings.webp" id="header_settings" alt="settings">
       <div id="settings_block" class="flexSBDesctop displayNone">
         <div>
-          <span id="theme_light">&#9728;</span> 
-          <span id="theme_dark">	&#9679;</span>
+          <!-- <span id="theme_light">&#9728;</span> 
+          <span id="theme_dark">	&#9679;</span> -->
+        
+          <div id="theme_light"></div> 
+          <div id="theme_dark"></div>
+
         </div>
         <!-- <div> -->
           <!-- <p>lang</p> -->
@@ -45,29 +49,12 @@
       </div>
       <div id="welcome_right">
         <div id="welcome_right_cover">
-          <img src="img/welcome.webp" id="welcome_img" alt="my photo">
+          <img id="welcome_img" alt="my photo">
         </div>
       </div>
     </div>
   </div>
-  <div id="test">
-    <p>width = </p>
-    <span id="w100">100</span>
-    <span id="w200">200</span>
-    <span id="w300">300</span>
-    <span id="w400">400</span>
-    <span id="w500">500</span>
-    <span id="w600">600</span>
-    <span id="w700">700</span>
-    <span id="w800">800</span>
-    <span id="w900">900</span>
-    <span id="w1000">1000</span>
-    <span id="w1100">1100</span>
-    <span id="w1200">1200</span>
-    <span id="w1300">1300</span>
-    <span id="w1400">1400</span>
-    <span id="w1500">1500</span>
-  </div>
+
 
   <div id="body_cover">
     <div id="about_block" class="width1000 marginCenter">
