--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-      <title>Vladimir web deweloper portfolio</title>
+    <title>Vladimir web deweloper portfolio</title>
   </head>
   <body id="body" class="light_theme">
     <header class="flexSBDesctop">      
@@ -147,7 +143,6 @@
       </footer>
     </div>
     <script src="jquery-3.7.1.js"> </script>
-
     <script src="script.js"> </script>
   </body>
 </html>
