--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Vladimir web deweloper portfolio</title>
+    <meta name="description" content="Frontend deweloper. Creating landing pages, target pages, and business cards">
   </head>
   <body id="body" class="light_theme">
     <header class="flexSBDesctop">      
@@ -57,7 +58,7 @@
     <div id="about_block" class="width1000 marginCenter">
       <h2 class="mobileDisplayNone">== About me ========</h2>
       <h2 class="desctopDisplayNone">About me</h2>
-      <p>&#128075; I'm a junior frontend developer with a background in telecommunications. I specialize in frontend development, creating landing pages, target pages, and business cards. I can handle design work and simple backend. I pay close attention to the usability and adaptability of websites for mobile devices, utilizing new image formats for faster page loading.</p>
+      <p>&#128075; I'm a junior frontend developer with a degree from the University of Telecommunications. I specialize in frontend development, creating landing pages, target pages, and business cards. I can handle design work and simple backend. I pay close attention to the usability and adaptability of websites for mobile devices, utilizing new image formats for faster page loading.</p>
       <p>&#128104;&#8205;&#128187; I am proficient in <span class="unicode_checkmarks"> &#10004;</span> <span class="decoration_underline"> HTML </span>, <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> CSS </span>, <span class="unicode_checkmarks">&#10004; </span> <span class="decoration_underline"> JavaScript </span>, and I am skilled in using <span class="unicode_checkmarks"> &#10004;</span> <span class="decoration_underline"> Photoshop </span> and <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> Figma </span>. </p>
       <p>&#128104;&#8205;&#128187; I work with <span class="unicode_checkmarks">&#10004;</span> <span class="decoration_underline"> jQuery </span> and have a basic <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> Vue.js </span> skills.</p> 
       <p>&#128104;&#8205;&#128187; Additionally, I can develop simple backend solutions using <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> PHP </span> and <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> MySQL </span>.</p>
