--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Vladimir web deweloper portfolio</title>
     <meta name="description" content="Frontend deweloper. Creating landing pages, target pages, and business cards">
+    <meta property = "og:image" content = "https://vladimir0001996.github.io/Vladimir0001996/main_page.jpg">
   </head>
   <body id="body" class="light_theme">
     <header class="flexSBDesctop">      
