--- a/index.html
+++ b/index.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="RU">
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Vladimir web deweloper portfolio</title>
+    <script src="lang.js"> </script>
+    <title>Бугаев Владимир Веб разработчик</title>
     <meta name="description" content="Frontend deweloper. Creating landing pages, target pages, and business cards">
     <meta property = "og:image" content = "https://vladimir0001996.github.io/Vladimir0001996/main_page.jpg">
   </head>
   <body id="body" class="light_theme">
     <header class="flexSBDesctop">      
       <img src="img/settings.webp" id="header_settings" alt="settings">
-      <div id="settings_block" class="flexSBDesctop displayNone">
-        <div>
-          <!-- <span id="theme_light">&#9728;</span> 
-          <span id="theme_dark">	&#9679;</span> -->
-        
+      <div id="settings_block" class="displayNone">
+        <div class="flexSADesctop">
           <div id="theme_light"></div> 
           <div id="theme_dark"></div>
-
         </div>
-        <!-- <div> -->
-          <!-- <p>lang</p> -->
-          <!-- <span id="lang_en">EN</span> 
-          <span>/</span>
-          <span id="lang_ru">RU</span>
-        </div> -->
+          <div class="lang_en" id="lang_switch_to_en">EN</div>
+          <div class="lang_ru opacity_1">RU</div>
       </div>
 
       <div id="header_menu" class="mobileDisplayNone">
-        <a href="#about_block"><div>about me</div></a>
-        <a href="#project_container"><div>projects</div></a>
-        <a href="#skills_block"><div>skills</div></a>
-        <a href="#footer_box"><div>contacts</div></a>
+        <a href="#about_block"><div>обо мне</div></a>
+        <a href="#project_container"><div>проекты</div></a>
+        <a href="#skills_block"><div>навыки</div></a>
+        <a href="#footer_box"><div>контакты</div></a>
       </div>
   </header>
   <div id="welcome_block_cover">
@@ -41,9 +34,9 @@
     <div id="welcome_block" class="flexSBDesctop">
       <div id="welcome_left">
         <div id="welcome_left_cover">
-          <div id="welcome_h1_cover"><img src="img/wave.webp" id="welcome_hi_emoji" alt="hi emoji"><h1 id="welcome_h1" class="cent">I'm Vladimir</h1></div>
+          <div id="welcome_h1_cover"><img src="img/wave.webp" id="welcome_hi_emoji" alt="hi emoji"><h1 id="welcome_h1" class="cent">Владимир</h1></div>
           <h2 id="welcome_h2" class="cent">Web developer</h2>
-          <p id="welcome_text">Welcome to my portfolio! <br> I'm a web developer specializing in creating responsive, user-friendly websites. I transform ideas into functional and visually appealing digital experiences. Explore my projects and let's build something amazing together!</p>
+          <p id="welcome_text">Создаю адаптивные, быстрые, удобные дляя пользователя сайты. <br> Превращу ваши самые смелые идеи в жизнь максимально качественно. Ниже вы можете ознакомиться с моими проектами!</p>
         </div>
       </div>
       <div id="welcome_right">
@@ -57,21 +50,21 @@
 
   <div id="body_cover">
     <div id="about_block" class="width1000 marginCenter">
-      <h2 class="mobileDisplayNone">== About me ========</h2>
-      <h2 class="desctopDisplayNone">About me</h2>
-      <p>&#128075; I'm a junior frontend developer with a degree from the University of Telecommunications. I specialize in frontend development, creating landing pages, target pages, and business cards. I can handle design work and simple backend. I pay close attention to the usability and adaptability of websites for mobile devices, utilizing new image formats for faster page loading.</p>
-      <p>&#128104;&#8205;&#128187; I am proficient in <span class="unicode_checkmarks"> &#10004;</span> <span class="decoration_underline"> HTML </span>, <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> CSS </span>, <span class="unicode_checkmarks">&#10004; </span> <span class="decoration_underline"> JavaScript </span>, and I am skilled in using <span class="unicode_checkmarks"> &#10004;</span> <span class="decoration_underline"> Photoshop </span> and <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> Figma </span>. </p>
-      <p>&#128104;&#8205;&#128187; I work with <span class="unicode_checkmarks">&#10004;</span> <span class="decoration_underline"> jQuery </span> and have a basic <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> Vue.js </span> skills.</p> 
-      <p>&#128104;&#8205;&#128187; Additionally, I can develop simple backend solutions using <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> PHP </span> and <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> MySQL </span>.</p>
-      <p>&#128175; I am responsible and committed to completing tasks thoroughly. I am results-oriented and always strive to help achieve project goals.</p>
-      <p>&#128083;I look forward to the opportunity to contribute to your projects.</p>
+      <h2 class="mobileDisplayNone">== Обо мне ========</h2>
+      <h2 class="desctopDisplayNone">Обо мне</h2>
+      <p>&#128075; Я Junior  frontend developer, закончил СПБГУТ. Специализируюсь на фронтенд-разработке, создаю лендинги, целевые страницы и визитоки. Могу проработать дизайн, написать простой бэкэнд. Я уделяю пристальное внимание удобству использования и адаптивности сайтов для мобильных устройств, используя современные форматы изображений для более быстрой загрузки страниц.</p>
+      <p>&#128104;&#8205;&#128187; Хорошо знаю <span class="unicode_checkmarks"> &#10004;</span> <span class="decoration_underline"> HTML </span>, <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> CSS </span>, <span class="unicode_checkmarks">&#10004; </span> <span class="decoration_underline"> JavaScript </span>, уверенно пользуюсь <span class="unicode_checkmarks"> &#10004;</span> <span class="decoration_underline"> Photoshop </span> and <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> Figma </span>. </p>
+      <p>&#128104;&#8205;&#128187; Использую  <span class="unicode_checkmarks">&#10004;</span> <span class="decoration_underline"> jQuery </span>, знаком с <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> Vue.js </span></p> 
+      <p>&#128104;&#8205;&#128187; Могу разрабатывать простые серверные решения, используя <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> PHP </span> and <span class="unicode_checkmarks"> &#10004; </span> <span class="decoration_underline"> MySQL </span>.</p>
+      <p>&#128175; Я ответственен и качественно выполняю поставленные задачи в срок. Ориентирован на результат и всегда стремлюсь помочь в достижении целей проекта.</p>
+      <p>&#128083;С нетерпением жду возможности внести свой вклад в ваши проекты.</p>
     </div>
     
 
 
     <div id="project_container" class="width1000 marginCenter">
-      <h2 class="mobileDisplayNone">== Projects ========</h2>
-      <h2 class="desctopDisplayNone">Projects</h2>
+      <h2 class="mobileDisplayNone">== Проекты ========</h2>
+      <h2 class="desctopDisplayNone">Проекты</h2>
       <div id="projects_block">
         <div id="projects_scroll" class="flexSBDesctop">
           <!-- <div class="project_card">
@@ -88,6 +81,7 @@
         <div id="progress_point_2" class="progress_points"></div>
         <div id="progress_point_3" class="progress_points"></div>
         <div id="progress_point_4" class="progress_points"></div>
+        <!-- <div id="progress_point_5" class="progress_points"></div> -->
       </div>
       <div id="project_full_discription_cover"> 
         <div id="project_full_discription_close_button" class="desctopDisplayNone"></div>
@@ -101,8 +95,8 @@
       </div>
 
     <div id="skills_block" class="width1000 marginCenter">
-      <h2 class="mobileDisplayNone">== Skills ========</h2>
-      <h2 class="desctopDisplayNone">Skills</h2>
+      <h2 class="mobileDisplayNone">== Навыки ========</h2>
+      <h2 class="desctopDisplayNone">Навыки</h2>
       <div id="skills_img_block">
         <img src="img/html.webp" id="skill_1_img" alt="html">
         <img src="img/css.webp" id="skill_2_img" alt="css">
@@ -127,7 +121,7 @@
       </div>
 
       <footer>
-        <h2 class="desctopDisplayNone">Contacts</h2>
+        <h2 class="desctopDisplayNone">Контакты</h2>
         <div id="footer_box" class="width1000 marginCenter">
           <div id="footer_contacts">
             <a href="https://t.me/Vladimir_Bugaev" target="_blank"><p id="footer_telegram">+79522297864</p></a>
@@ -136,10 +130,10 @@
             <a href="mailto:vladimir0001996@gmail.com" target="_blank"><p id="footer_mail">Vladimir0001996@gmail.com</p></a>
           </div>
           <div id="footer_menu" class="flexSBDesctop">
-            <a href="#about_block"><div>about me</div></a>
-            <a href="#project_container"><div>projects</div></a>
-            <a href="#skills_block"><div>skills</div></a>
-            <a href="#footer_box"><div>contacts</div></a>
+            <a href="#about_block"><div>обо мне</div></a>
+            <a href="#project_container"><div>проекты</div></a>
+            <a href="#skills_block"><div>навыки</div></a>
+            <a href="#footer_box"><div>конакты</div></a>
           </div>
         </div>
       </footer>
