--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="lang.js"> </script>
     <title>Бугаев Владимир Веб разработчик</title>
-    <meta name="description" content="Frontend deweloper. Creating landing pages, target pages, and business cards">
+    <meta name="description" content="Frontend web deweloper. Разработка сайтов, визиток, верстка">
     <meta property = "og:image" content = "https://vladimir0001996.github.io/Vladimir0001996/main_page.jpg">
   </head>
   <body id="body" class="light_theme">
